Changes to home_map

--- a/config/main_init.cfg
+++ b/config/main_init.cfg
@@ -9,7 +9,7 @@
 />
 
 <StartMap 
-	File = "sample_map.hpm" 
+	File = "home_map.hpm" 
 	Folder = "maps/" 
-	Pos = "Spawnpoint_1" 
+	Pos = "Start_Begin_lmao" 
 />
